# qrtools

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
public/: manifest.json  sw.js
src/: main.ts  qr-protocol.ts  style.css  web-crypto.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  qr.rs  screen.rs
