[package]
name = "qrtools"
version = "1.0.0"
edition = "2021"
description = "Encrypted QR code and barcode tools"
authors = ["you"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
bardecoder = "0.5"
image = "0.24"
png = "0.17"
tokio = { version = "1", features = ["full"] }

[lib]
name = "qrtools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
