[package]
name = "qrtools"
version = "1.1.0"
edition = "2021"
description = "QR code generator and scanner with OCR"
authors = ["you"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = { version = "0.14", default-features = false }
bardecoder = "0.5"
image = "0.24"
png = "0.17"
screenshots = "0.8"
base64 = "0.22"

[lib]
name = "qrtools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
